fix(paddle-board-info): removes unnecessary whitespace

--- a/src/components/paddle-board-info/paddle-board-info.less
+++ b/src/components/paddle-board-info/paddle-board-info.less
@@ -30,6 +30,7 @@
 
 		@media @s-only {
 			float: none;
+			padding-left: 0;
 			width: 100%;
 		}
 	}
